force-app/main/default/objects/SmartPath__c/SmartPath__c.object-meta.xml
<CustomObject>
    <label>SmartPath</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>SmartPath Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartPaths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>