force-app/main/default/objects/SmartPath__c/fields/Credit_Services_Provider__c.field-meta.xml
<CustomField>
    <fullName>Credit_Services_Provider__c</fullName>
    <label>Credit Services Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>????</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>