force-app/main/default/objects/SmartPath__c/fields/Dealer_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Commitment__c</fullName>
    <label>Dealer Commitment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>