force-app/main/default/objects/SmartPath__c/fields/Digital_Deal_Jacket__c.field-meta.xml
<CustomField>
    <fullName>Digital_Deal_Jacket__c</fullName>
    <label>Digital Deal Jacket</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>????</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>