force-app/main/default/objects/SmartPath__c/fields/Nomination_Date__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Date__c</fullName>
    <label>Nomination Date</label>
    <type>Date</type>
</CustomField>