force-app/main/default/objects/SmartPath__c/fields/Pre_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Launch_Date__c</fullName>
    <label>Pre-Launch Date</label>
    <type>Date</type>
</CustomField>