force-app/main/default/objects/SmartPath__c/fields/Presentation_Menu_Provider__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Menu_Provider__c</fullName>
    <label>Presentation Menu Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>????</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>