force-app/main/default/objects/SmartPath__c/fields/SmartPath_Call_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_Call_Tracking_Number__c</fullName>
    <label>SmartPath Call Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>