force-app/main/default/objects/SmartPath__c/fields/SmartPath_Pro__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_Pro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SmartPath Pro</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pro for SmartPaths</relationshipLabel>
    <relationshipName>SmartPaths</relationshipName>
    <type>Lookup</type>
</CustomField>