force-app/main/default/objects/SmartPath__c/fields/SmartPath_Sales_Level__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_Sales_Level__c</fullName>
    <label>SmartPath Sales Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Pre Level 1 &amp; 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>