force-app/main/default/objects/SmartPath__c/fields/SmartPath_Status__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_Status__c</fullName>
    <label>SmartPath Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done / Good</fullName>
            </value>
            <value>
                <fullName>Needs work</fullName>
            </value>
            <value>
                <fullName>No Progress</fullName>
            </value>
            <value>
                <fullName>Working on it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>