force-app/main/default/objects/SmartPath__c/fields/SmartPath_TFS_Credit_App__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_TFS_Credit_App__c</fullName>
    <label>SmartPath TFS Credit App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>????</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>