force-app/main/default/objects/SmartPath__c/fields/Soft_Credit_Pull__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Pull__c</fullName>
    <label>Soft Credit Pull</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>