force-app/main/default/objects/SmartPath__c/recordTypes/SmartPath_F_I.recordType-meta.xml
<RecordType>
    <fullName>SmartPath_F_I</fullName>
    <active>true</active>
    <label>SmartPath F&amp;I</label>
</RecordType>