force-app/main/default/objects/SmartPath__c/recordTypes/SmartPath_Sales.recordType-meta.xml
<RecordType>
    <fullName>SmartPath_Sales</fullName>
    <active>true</active>
    <label>SmartPath Sales</label>
</RecordType>