force-app/main/default/objects/SmartPath__c/recordTypes/SmartPath_Service.recordType-meta.xml
<RecordType>
    <fullName>SmartPath_Service</fullName>
    <active>true</active>
    <label>SmartPath Service</label>
</RecordType>